--- a/weather/package.json
+++ b/weather/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
     "leaflet": "^1.2.0",
     "rxjs": "^5.1.0",
