--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
     "leaflet": "^1.2.0",
+    "ng2-redux": "^5.1.2",
+    "redux": "^3.7.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
